<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/dailymeal"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/fac"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_chart"
            android:icon="@drawable/chart"
            android:title="@string/my_chart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="Settings" />

    </group>
</menu>