<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login"
    android:background="@color/ash">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo">
    </ImageView>

    <TextView
        android:id="@+id/login_txt"
        android:layout_marginTop="10dp"
        android:layout_below="@id/company_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Admin Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="33sp"/>

    <EditText
        android:id="@+id/email_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_admin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password_admin"
        android:layout_above="@+id/btn_login_admin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/baseline_vpn_key_24" />

    <Button
        android:id="@+id/btn_login_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_layout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:onClick="Login"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_marginBottom="250dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not Register Yet?"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:layout_weight="1"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/registerNow"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/register"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>