<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".activities.Welcome">

    <!--<ImageView
        android:foreground="@drawable/forground_design"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wel" />-->

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster_two_bold"
        android:text="@string/foodlagbe"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2"
        android:textAlignment="center"/>-->

    <ImageView
        android:id="@+id/name_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo">
    </ImageView>

    <TextView
        android:id="@+id/moto"
        android:layout_below="@id/name_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moto"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:textAlignment="center">
    </TextView>

    <!--<TextView
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:fontFamily="@font/zilla_slab_highlight_bold"
        android:text="@string/go_4_food"
        android:textAlignment="center"
        android:textColor="#ff6600"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.274" />-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button_admin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_round"
        android:onClick="login"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:onClick="loginAdmin"
        android:text="Login as Admin"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_button"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="register"
        android:textAlignment="center"
        android:background="@drawable/btn_round"/>

    <!--<TextView
        android:layout_width="393dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.7" />-->


</RelativeLayout>